[gd_scene load_steps=15 format=3 uid="uid://ba3727trfv2ib"]

[ext_resource type="Texture2D" uid="uid://bei7x67psb4c4" path="res://Assets_PixelAdventure/Main Characters/Mask Dude.png" id="1_18yh5"]
[ext_resource type="Script" path="res://player/player.gd" id="1_c8b3n"]
[ext_resource type="Script" path="res://player/camera_2d.gd" id="3_eusd7"]
[ext_resource type="LabelSettings" uid="uid://e5hyp2dcpo68" path="res://player/GUIText.tres" id="4_7nxkv"]
[ext_resource type="StyleBox" uid="uid://cmgjmynyautyv" path="res://Person/EnemyPig/hpGUI.tres" id="5_dhr3n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpl80"]
size = Vector2(21, 21)

[sub_resource type="Animation" id="Animation_xqt78"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fl63m"]
resource_name = "fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_x00df"]
resource_name = "idle"
length = 1.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_ne4ir"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_j5qbg"]
resource_name = "walk"
length = 1.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_m4wp3"]
resource_name = "injured"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 38, 39, 40, 41, 42]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bekm"]
_data = {
"RESET": SubResource("Animation_xqt78"),
"fall": SubResource("Animation_fl63m"),
"idle": SubResource("Animation_x00df"),
"injured": SubResource("Animation_m4wp3"),
"jump": SubResource("Animation_ne4ir"),
"walk": SubResource("Animation_j5qbg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1bc0"]
bg_color = Color(0.357751, 0, 0.0782869, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.573476, 0.00373646, 0.227841, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_mask = 6
script = ExtResource("1_c8b3n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -2)
texture = ExtResource("1_18yh5")
hframes = 11
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_qpl80")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5bekm")
}

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_eusd7")

[node name="PlayerGUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerGUI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="FrutasLabel2" type="Label" parent="PlayerGUI/HBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "Fruits:"
label_settings = ExtResource("4_7nxkv")

[node name="FrutasLabel" type="Label" parent="PlayerGUI/HBoxContainer"]
layout_mode = 2
label_settings = ExtResource("4_7nxkv")

[node name="HpProgressBar" type="ProgressBar" parent="PlayerGUI"]
offset_left = 1.0
offset_right = 98.0
offset_bottom = 12.0
theme_override_styles/background = SubResource("StyleBoxFlat_c1bc0")
theme_override_styles/fill = ExtResource("5_dhr3n")
max_value = 10.0
value = 5.0
show_percentage = false

[node name="RaycastDmg" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RaycastDmg"]
position = Vector2(-4, 0)
target_position = Vector2(0, 21)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="RaycastDmg"]
position = Vector2(2, 0)
target_position = Vector2(0, 21)
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="RaycastDmg"]
position = Vector2(8, 0)
target_position = Vector2(0, 21)
collision_mask = 2

[node name="ClodDownTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="ClodDownTimer" to="." method="_on_clod_down_timer_timeout"]
